Add STM32CubeIDE configuration files

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -34,34 +34,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := STM32F401RCT6_BLACKPILL
+BUILD_ARTIFACT_NAME := STM32F401RCT6-Black_Pill
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-STM32F401RCT6_BLACKPILL.elf \
+STM32F401RCT6-Black_Pill.elf \
 
 MAP_FILES += \
-STM32F401RCT6_BLACKPILL.map \
+STM32F401RCT6-Black_Pill.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-STM32F401RCT6_BLACKPILL.list \
+STM32F401RCT6-Black_Pill.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: STM32F401RCT6_BLACKPILL.elf secondary-outputs
+main-build: STM32F401RCT6-Black_Pill.elf secondary-outputs
 
 # Tool invocations
-STM32F401RCT6_BLACKPILL.elf STM32F401RCT6_BLACKPILL.map: $(OBJS) $(USER_OBJS) C:\Users\Mohamed\ Tarek\STM32CubeIDE\workspace_1.16.0\STM32F401RCT6_BLACKPILL\STM32F401RCTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "STM32F401RCT6_BLACKPILL.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Mohamed Tarek\STM32CubeIDE\workspace_1.16.0\STM32F401RCT6_BLACKPILL\STM32F401RCTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM32F401RCT6_BLACKPILL.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+STM32F401RCT6-Black_Pill.elf STM32F401RCT6-Black_Pill.map: $(OBJS) $(USER_OBJS) D:\Embedded\ Systems\STM32F401RCT6-Black_Pill\STM32F401RCTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "STM32F401RCT6-Black_Pill.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Embedded Systems\STM32F401RCT6-Black_Pill\STM32F401RCTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM32F401RCT6-Black_Pill.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -70,14 +70,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-STM32F401RCT6_BLACKPILL.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "STM32F401RCT6_BLACKPILL.list"
+STM32F401RCT6-Black_Pill.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "STM32F401RCT6-Black_Pill.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) STM32F401RCT6_BLACKPILL.elf STM32F401RCT6_BLACKPILL.list STM32F401RCT6_BLACKPILL.map default.size.stdout
+	-$(RM) STM32F401RCT6-Black_Pill.elf STM32F401RCT6-Black_Pill.list STM32F401RCT6-Black_Pill.map default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
